examples/test/testpolicy13650.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13650
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key21: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value36
      podSelector:
        matchLabels:
          key36: value28
          key18: value10
          key23: value11
